Bug 461490 - After every reboot wallpaper changes to the first one in the Wallpaper Slideshow list, irrespective of the current wallpaper
Summary: After every reboot wallpaper changes to the first one in the Wallpaper Slides...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Image & Slideshow wallpaper plugins (other bugs)
Version First Reported In: 5.26.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-11-06 08:37 UTC by shscs911
Modified: 2022-11-16 04:28 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shscs911 2022-11-06 08:37:14 UTC
SUMMARY
***
After every reboot wallpaper changes to the first one in the Wallpaper Slideshow list. Other Slideshow features like automatically changing wallpaper after a time period works as intended.
***

STEPS TO REPRODUCE
1. Go to Desktop -> 'Configure Desktop and Wallpaper'
2. Select Wallpaper type as 'Slideshow'
3. Select a Wallpaper folder
4. Select the desired wallpapers by clicking on the checkbox
5. Select 'Apply'

OBSERVED RESULT
- Wallpaper reverts to the first wallpaper from the selected list after reboot, even if the current/last wallpaper is different from the first one

EXPECTED RESULT
- Wallpaper should be the same as the last wallpaper at the time of reboot, which was how it worked previously

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.26.2
KDE Frameworks Version: 5.99.0
Qt Version: 5.15.7
Kernel Version: 6.0.7-arch1-1 (64-bit)
Graphics Platform: X11

ADDITIONAL INFORMATION
- Possibly related to this issue reported in r/kde:
      https://www.reddit.com/r/kde/comments/y3v2wg/wallpaper_path_not_updating_in
- https://invent.kde.org/plasma/plasma-workspace/-/commit/8b641963420311777217905ec13368dd850c13b6
- $HOME/.config/plasma-org.kde.plasma.desktop-appletsrc
      
    [Containments][17][Wallpaper][org.kde.image][General]
    Image=file:///usr/share/wallpapers/Next/contents/images/1920x1080.png
    SlidePaths=/usr/share/wallpapers

    [Containments][17][Wallpaper][org.kde.slideshow][General]
    SlideInterval=21600
    SlidePaths=$HOME/Q/Delta/Wall/
    SlideshowMode=4
    UncheckedSlides=$HOME/Q/Delta/Wall/wallhaven-47z89e.jpg
Comment 1 Fushan Wen 2022-11-07 00:47:08 UTC
The wallpaper path is not saved in the new plugin.
Comment 2 shscs911 2022-11-07 03:45:30 UTC
(In reply to Fushan Wen from comment #1)
> The wallpaper path is not saved in the new plugin.

Is wallpaper reset the expected behaviour now or will it be considered as a bug to be fixed in a future release?
Comment 3 Oded Arbel 2022-11-08 10:39:35 UTC
Can't repro with current Neon unstable (Plasma 5.26.80, Frameworks 5.100.0). On the first reboot, after today's update, it showed the default Plasma wallpaper before fading into the slideshow (that does not include the Plasma wallpaper), but subsequent session restarts and reboots go directly to a new image from the slideshow (not the previous one, maybe that is a required feature?).
Comment 4 shscs911 2022-11-08 12:08:54 UTC
(In reply to Oded Arbel from comment #3)
> Can't repro with current Neon unstable (Plasma 5.26.80, Frameworks 5.100.0).
> On the first reboot, after today's update, it showed the default Plasma
> wallpaper before fading into the slideshow (that does not include the Plasma
> wallpaper), but subsequent session restarts and reboots go directly to a new
> image from the slideshow (not the previous one, maybe that is a required
> feature?).

Is the new image from the slideshow you mentioned, the same every time i.e., the first wallpaper from the slideshow list?

The original behaviour was that the current wallpaper will persist across reboots and will change to the next wallpaper, as per the defined time interval.
Right now the wallpaper resets to the first one in the list after every reboot, which means that we will be seeing the same set of wallpapers all the time, even with the slideshow. Many wallpapers further down the list won't be appearing at all, unless we change the Slideshow order manually or set it to Random.
Comment 5 Fushan Wen 2022-11-08 14:10:13 UTC
I tend to mark the bug as intentional because it's expected that the wallpaper will be reset after plasmashell is restarted, but patches are welcome if someone wants to fix it.
Comment 6 Oded Arbel 2022-11-09 09:30:17 UTC
(In reply to shscs911 from comment #4)
> Is the new image from the slideshow you mentioned, the same every time i.e.,
> the first wallpaper from the slideshow list?

Huh. I think I understand the confusion: I have my sideshow set to random order, but from the discussion I now understand you have it setup to sequential ordering.
Comment 7 Bug Janitor Service 2022-11-09 14:26:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2314
Comment 8 Fushan Wen 2022-11-16 00:26:27 UTC
Git commit a83fb104e77d0f31f3aa7501e287f5004a4432d2 by Fushan Wen.
Committed on 16/11/2022 at 00:13.
Pushed by fusionfuture into branch 'master'.

wallpapers/image: save last wallpaper in slideshow mode

This restores the behavior in 5.25 and before.

The config property map is passed to the backend plugin to avoid binding
loop warnings caused by updating the "Image" property.
FIXED-IN: 5.26.4

M  +8    -0    wallpapers/image/imagepackage/contents/ui/main.qml
M  +35   -1    wallpapers/image/plugin/imagebackend.cpp
M  +14   -0    wallpapers/image/plugin/imagebackend.h

https://invent.kde.org/plasma/plasma-workspace/commit/a83fb104e77d0f31f3aa7501e287f5004a4432d2
Comment 9 Fushan Wen 2022-11-16 00:50:32 UTC
Git commit 51fdcd20a50712d6f5c4a88cbc02f167b3718528 by Fushan Wen.
Committed on 16/11/2022 at 00:50.
Pushed by fusionfuture into branch 'Plasma/5.26'.

wallpapers/image: save last wallpaper in slideshow mode

This restores the behavior in 5.25 and before.

The config property map is passed to the backend plugin to avoid binding
loop warnings caused by updating the "Image" property.
FIXED-IN: 5.26.4


(cherry picked from commit a83fb104e77d0f31f3aa7501e287f5004a4432d2)

M  +8    -0    wallpapers/image/imagepackage/contents/ui/main.qml
M  +35   -1    wallpapers/image/plugin/imagebackend.cpp
M  +14   -0    wallpapers/image/plugin/imagebackend.h

https://invent.kde.org/plasma/plasma-workspace/commit/51fdcd20a50712d6f5c4a88cbc02f167b3718528
Comment 10 shscs911 2022-11-16 04:28:43 UTC
(In reply to Fushan Wen from comment #9)
> Git commit 51fdcd20a50712d6f5c4a88cbc02f167b3718528 by Fushan Wen.
> Committed on 16/11/2022 at 00:50.
> Pushed by fusionfuture into branch 'Plasma/5.26'.
> 
> wallpapers/image: save last wallpaper in slideshow mode
> 
> This restores the behavior in 5.25 and before.
> 
> The config property map is passed to the backend plugin to avoid binding
> loop warnings caused by updating the "Image" property.
> FIXED-IN: 5.26.4
> 
> 
> (cherry picked from commit a83fb104e77d0f31f3aa7501e287f5004a4432d2)
> 
> M  +8    -0    wallpapers/image/imagepackage/contents/ui/main.qml
> M  +35   -1    wallpapers/image/plugin/imagebackend.cpp
> M  +14   -0    wallpapers/image/plugin/imagebackend.h
> 
> https://invent.kde.org/plasma/plasma-workspace/commit/
> 51fdcd20a50712d6f5c4a88cbc02f167b3718528

Thank you so much for fixing this.