wallpapers/image: save last wallpaper in slideshow mode

This restores the behavior in 5.25 and before.

The config property map is passed to the backend plugin to avoid binding
loop warnings caused by updating the "Image" property.

BUG: 461490
FIXED-IN: 5.26.4


(cherry picked from commit a83fb104e77d0f31f3aa7501e287f5004a4432d2)